--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.1"
   }
 }
