--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -10,12 +10,16 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/express": "^5.0.1"
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
