--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@repo/backend-common": "workspace:*",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.0"
   },
