--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -9,6 +9,7 @@
     "dev": "npm run build && npm run start"
   },
   "devDependencies": {
+    "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/backend-common": "workspace:*",
     "@repo/common": "workspace:*",
