--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@repo/db": "workspace:*",
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.1"
   }
